[gd_scene load_steps=3 format=3 uid="uid://bcirlgcvbvw6k"]

[ext_resource type="Script" path="res://Editor/Props/PrismShapePropertiesUI.gd" id="1_b41ft"]
[ext_resource type="Texture2D" uid="uid://cv4h5k0qurvcv" path="res://Editor/PropTextures/Ice.png" id="1_ygvin"]

[node name="PrismShapePropertiesUI" type="VBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.0
offset_right = 121.0
offset_bottom = 400.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 2
mouse_filter = 2
script = ExtResource("1_b41ft")

[node name="MainContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Prism Shape Options"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Surface Type"

[node name="SurfaceOptions" type="OptionButton" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
item_count = 1
selected = 0
popup/item_0/text = "WIP"
popup/item_0/id = 0
popup/item_0/disabled = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Width"

[node name="WidthSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 512.0
step = 0.1
value = 1.0
alignment = 1
custom_arrow_step = 1.0
select_all_on_focus = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Height"

[node name="HeightSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 512.0
step = 0.1
value = 1.0
alignment = 1
custom_arrow_step = 1.0
select_all_on_focus = true

[node name="HBoxContainer7" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
text = "Depth"

[node name="DepthSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 512.0
step = 0.1
value = 1.0
alignment = 1
custom_arrow_step = 1.0
select_all_on_focus = true

[node name="HBoxContainer9" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sides"

[node name="SideSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer9"]
unique_name_in_owner = true
layout_mode = 2
min_value = 3.0
max_value = 64.0
value = 4.0
alignment = 1
select_all_on_focus = true

[node name="HBoxContainer6" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pointy"

[node name="PointyToggle" type="CheckButton" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer8" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sharp"

[node name="SharpToggle" type="CheckButton" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="HBoxContainer5" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use Online Textures"

[node name="OnlineTextureToggle" type="CheckButton" parent="MainContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureVisibilityButton" type="Button" parent="MainContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
text = "Textures v"

[node name="TextureOptionsContainer" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TopTextureContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/TextureOptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/TextureOptionsContainer/TopTextureContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Top Texture"

[node name="TopTextureOptions" type="OptionButton" parent="MainContainer/MarginContainer/VBoxContainer/TextureOptionsContainer/TopTextureContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(148, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
item_count = 1
selected = 0
popup/item_0/text = "Ice"
popup/item_0/icon = ExtResource("1_ygvin")
popup/item_0/id = 0

[node name="SideTextureContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/TextureOptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/TextureOptionsContainer/SideTextureContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Side Texture"

[node name="SideTextureOptions" type="OptionButton" parent="MainContainer/MarginContainer/VBoxContainer/TextureOptionsContainer/SideTextureContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(148, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
item_count = 1
selected = 0
popup/item_0/text = "Ice"
popup/item_0/icon = ExtResource("1_ygvin")
popup/item_0/id = 0

[node name="BottomTextureContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/TextureOptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/TextureOptionsContainer/BottomTextureContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Side Texture"

[node name="BottomTextureOptions" type="OptionButton" parent="MainContainer/MarginContainer/VBoxContainer/TextureOptionsContainer/BottomTextureContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(148, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
item_count = 1
selected = 0
popup/item_0/text = "Ice"
popup/item_0/icon = ExtResource("1_ygvin")
popup/item_0/id = 0

[node name="TextureUrlsContainer" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TopTextureUrlContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/TextureUrlsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/TextureUrlsContainer/TopTextureUrlContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Top URL"

[node name="TopTextureLineEdit" type="LineEdit" parent="MainContainer/MarginContainer/VBoxContainer/TextureUrlsContainer/TopTextureUrlContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(148, 0)
layout_mode = 2
placeholder_text = "URL"

[node name="SideTextureUrlContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/TextureUrlsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/TextureUrlsContainer/SideTextureUrlContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Side URL"

[node name="SideTextureLineEdit" type="LineEdit" parent="MainContainer/MarginContainer/VBoxContainer/TextureUrlsContainer/SideTextureUrlContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(148, 0)
layout_mode = 2
placeholder_text = "URL"

[node name="BottomTextureUrlContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/TextureUrlsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/TextureUrlsContainer/BottomTextureUrlContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bottom URL"

[node name="BottomTextureLineEdit" type="LineEdit" parent="MainContainer/MarginContainer/VBoxContainer/TextureUrlsContainer/BottomTextureUrlContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(148, 0)
layout_mode = 2
placeholder_text = "URL"

[node name="HSeparator" type="HSeparator" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Position"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="PosXSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1024.0
max_value = 1024.0
step = 0.0
allow_greater = true
allow_lesser = true
alignment = 1
custom_arrow_step = 4.0
select_all_on_focus = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Y"

[node name="PosYSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1024.0
max_value = 1024.0
step = 0.0
allow_greater = true
allow_lesser = true
alignment = 1
custom_arrow_step = 4.0
select_all_on_focus = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Z"

[node name="PosZSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1024.0
max_value = 1024.0
step = 0.0
allow_greater = true
allow_lesser = true
alignment = 1
custom_arrow_step = 4.0
select_all_on_focus = true

[node name="VSeparator" type="VSeparator" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Rotation"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="RotXSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
alignment = 1
select_all_on_focus = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Y"

[node name="RotYSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
alignment = 1
select_all_on_focus = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Z"

[node name="RotZSpinbox" type="SpinBox" parent="MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
alignment = 1
select_all_on_focus = true

[node name="VisibilityButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
text = "^ Prism Shape"
